<resources>
    <string name="app_name">Daaem</string>
    <string name="tap_to_continue">Tap To Continue</string>

    <string name="to_measurement_button">To Measurement</string>
    <string-array name="arcore_measurement_buttons">
        <item>@string/to_measurement_button</item>
    </string-array>
    <string name="distance_from_camera">Distance from camera</string>
    <string name="distance_of_2_points">Distance of 2 points</string>
    <string name="distance_of_multiple_points">Distance of multiple points</string>
    <string name="distance_from_ground">Distance from ground</string>
    <string name="clear">Clear</string>
    <string name="initCM">0.0</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="full_category_space">Full Category Space</string>
    <string name="customer_category">Customer Category</string>
    <string name="sos">SOS%</string>
    <string name="save">Save</string>
    <string name="unit">cm</string>
    <string name="set">Set</string>
    <string name="reset">Reset</string>
    <string name="choose">Choose</string>
    <string name="please_choose_any_of_the_option_for_selection">Please choose any of the option for selection!</string>
    <string name="_2_points_selection">2 Points</string>
    <string name="multi_points">Multi Points</string>
    <string name="no_of_points">No Of Points</string>
    <string-array name="distance_mode">
        <item>@string/distance_from_camera</item>
        <item>@string/distance_of_2_points</item>
        <item>@string/distance_of_multiple_points</item>
        <item>@string/distance_from_ground</item>
    </string-array>

    <string name="user_id_username">User ID / Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember Me</string>
    <string name="validate_username">Enter Username</string>
    <string name="validate_password">Enter Password</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="limit_exceeded">Limit exceeded</string>
    <string name="image_uri">Image URI</string>
    <string name="success_msg">Your Data has been submitted successfully.</string>
    <string name="ok">OK</string>
    <string name="total_sos">Total SOS</string>
    <string name="customer_sos">Customer SOS</string>
    <string name="brand_sos">Brand SOS</string>
    <string name="loading">Loading...</string>
    <string name="uploading">Uploading</string>
</resources>
