<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/username_icon"
        android:hint="@string/user_id_username"
        android:background="@drawable/edittext_border"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="8dp"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:drawableStart="@drawable/password_icon"
        android:background="@drawable/edittext_border"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"/>

    <RelativeLayout
        android:id="@+id/layoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@+id/etPassword">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:src="@drawable/signin_icon" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="18dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/icon"
            android:textColor="@android:color/white"
            android:textAllCaps="false" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/remember_me"
        app:layout_constraintTop_toBottomOf="@+id/layoutButton"/>


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>