<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:id="@+id/layoutParent"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashboardActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFullCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/full_category_space"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCameraFullCategory"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_camera"
        android:scaleType="fitXY"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFullCategory"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/layoutFullCategoryValue"
        app:layout_constraintTop_toBottomOf="@+id/ivCameraFullCategory">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFullCategoryValue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="CM"
            android:gravity="center"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edittext_border"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCustomerCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        android:text="@string/customer_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutFullCategoryValue"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivCameraCustomerCategory"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_camera"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCustomerCategory"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCustomerCategoryValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/ivCameraCustomerCategory">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCustomerCategoryValue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="CM"
            android:gravity="center"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edittext_border"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sos"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCustomerCategoryValue"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSOSValue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="CM"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/tvSOS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edittext_border"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvURI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/layoutButtons"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSOSValue">

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btnClear"
           android:layout_width="150dp"
           android:layout_height="wrap_content"
           android:textAllCaps="false"
           android:text="@string/clear"
           android:textColor="@color/white"
           android:background="@drawable/rounded_button"
           app:layout_constraintEnd_toStartOf="@+id/btnSave"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnClear"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>